2013-03-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def (vga): Disable on coreboot and multiboot
	platforms.

2013-03-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkconfig_lib.in (prepare_grub_to_access_device): Fix
	handling of multi-device filesystems.

2013-03-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/Makefile.core.def (vbe): Disable on coreboot and multiboot
	platforms.

2013-03-24  Vladimir Serbinenko  <phcoder@gmail.com>

	Add new 'proc' filesystem framework and put luks_script into it.

2013-03-23  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/at_keyboard.c: Increase robustness on coreboot
	and qemu.

2013-03-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c: Fix incorrect handling of special volumes.

2013-03-22  Vladimir Serbinenko  <phcoder@gmail.com>

	Add ability to generate newc additions on runtime.

2013-03-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/i386/coreboot/cbls.c: Fix typos and wrong
	description.

2013-03-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/POTFILES.in: Regenerate.

2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/verify.c (hashes): Add several hashes
	from the spec.

2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Slight improve in USB-related boot-time checkpoints.

2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/boottime.c: Fix copyright header.

2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>

	New commands cbmemc, lscoreboot, coreboot_boottime to inspect
	coreboot tables content. Support for cbmemc.

2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix a conflict between ports structures with 2 controllers of
	same kind.

2013-03-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/boottime.h: Add missing file.

2013-03-19  Vladimir Serbinenko  <phcoder@gmail.com>

	Initialize USB ports in parallel to speed-up boot.
